extension_tests/invalid/syntaxErr/doWhile/doWhileNoDone.wacc
# while missing closing done

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    int i = 0;
    do
        print i;
        i = i + 1
    while i < 5
end
